[update] ドキュメント整備
